# postgrs

./: Cargo.toml  README.md
docs/: storage.md
src/: lib.rs  main.rs  pg_config.rs
src/access/: htup_details.rs  mod.rs
src/backend/: mod.rs
src/backend/bootstrap/: parser.rs
src/backend/storage/: mod.rs  relfilenode.rs  relfilenodebackend.rs
src/backend/storage/buffer/: mod.rs
src/common/: mod.rs  relpath.rs
src/parser/: identifiers.rs  keywords.rs  mod.rs  node.rs  parser.rs  scanner.rs
src/parser/sql/: mod.rs  sql.pest
src/parser/sql/keywords/: commands.rs  keywords.rs
src/parser/sql/nodes/: mod.rs
src/storage/: block.rs  mod.rs
src/storage/file/: fd.rs
src/storage/page/: bufpage.rs  mod.rs
src/types/: mod.rs  oid.rs
src/utils/: mod.rs
src/utils/cache/: inval.rs  mod.rs  relmapper.rs
src/utils/init/: globals.rs
